Add styling and content (text)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <p>Front End Developer Student <br> and Communication Strategist</p>     
                 </div>
                 <div class="heading-info-contact flex justify-center">
+                    <img class="github" src="./Assets/github-icon.png">
                     <img class="linkedin" src="./Assets/linkedin_black_logo_icon.png">
                     <span class="material-icons">phone_iphone</span>
                     <span class="material-icons">email</span>
@@ -31,12 +32,13 @@
             <div class="main-content flex column">
                 <div class="main-info-profile flex column">
                     <h2 class="">Profile</h2>  
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit, eveniet? Aliquam repellat atque ad excepturi itaque alias molestiae recusandae quasi vitae reiciendis quisquam repudiandae saepe id assumenda, fugiat earum qui.
-                    <br><br>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit, eveniet? Aliquam repellat atque ad excepturi itaque alias molestiae recusandae quasi vitae reiciendis quisquam repudiandae saepe id assumenda, fugiat earum qui.
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit, eveniet? Aliquam repellat atque ad excepturi itaque alias molestiae recusandae quasi vitae reiciendis quisquam repudiandae saepe id assumenda, fugiat earum qui.
+                    <p> I got a bachelor's degree in media and communication science with focus on
+                        strategic communication. With that knowledge and experience in my pocket, I moved on to a - for the topic - relevant further education; right now I’m studying to be a Front End Developer.
+                        I respect the power of all communications, everything from texts to grimaces. I'm curious about the possibilities and challenges of digitalization - the society and its functions are going through a change digitally. How should we succeed in including everyone? Therefore, I have a great interest in UX and graphic design. To make people actually adopt and use new products - the products needs to be user-friendly otherwise people will be excluded.
+                        <br><br>
+                        I have a great work ethic and a willingness to learn and share knowledge with any team. I value a strong corporate culture highly as I know common values, strategies and core values ​​are followed by a pleasant working climate in general and profitability in particular. The goal is that everyone in the workplace should not only know what they are doing but why they are doing it.
+                
                     </p> 
-                    <hr size="4" width="100%" color="black">
                 </div>
 
                 <div class="main-info-portfolio flex column">
@@ -47,17 +49,30 @@
                         <li>Illustrations</a></li>
                         <li>Graphic Design</a></li>
                       </ul>
-                    <hr size="4" width="100%" color="black">
                 </div>
 
-                <div class="main-info-education flex column">
-                    <h2 class="">Education</h2>  
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit, eveniet? Aliquam repellat atque ad excepturi itaque alias molestiae recusandae quasi vitae reiciendis quisquam repudiandae saepe id assumenda, fugiat earum qui.
-                    <br><br>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit, eveniet? Aliquam repellat atque ad excepturi itaque alias molestiae recusandae quasi vitae reiciendis quisquam repudiandae saepe id assumenda, fugiat earum qui.
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit, eveniet? Aliquam repellat atque ad excepturi itaque alias molestiae recusandae quasi vitae reiciendis quisquam repudiandae saepe id assumenda, fugiat earum qui.
-                    </p> 
-                    <hr size="4" width="100%" color="black">
+                <div class="main-info-education flex wrap grow">
+                     
+                    <div class="education-1 grow"><h2 class="">Education</h2> 
+                    <h3>Medieinstitutet</h3>
+                    <p>Front End Developer | 2021-active</p>
+                    </div>
+                    <div class="education-2 grow">
+                    <h3>Uppsala university</h3>
+                    <p>Business ethics | 2019</p>
+                    </div>
+                    <div class="education-3 grow">
+                    <h3>Kristianstad University</h3>
+                    <p>Graphic design | 2019
+                    Graphic design for print and mobile devices</p>
+                    </div>
+                    <div class="education-4 grow">
+                    <h3>Umeå University</h3>
+                    <p>Media and communication science - strategic communication | 2015 - 2018
+                    Marketing, Project Management, Public Relations,
+                    Communication Planning, Production, Event, Rhetoric, etc..</p>
+                    </div>
+
                 </div>
 
                 <div class="main-info-experience flex column">
@@ -67,7 +82,6 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit, eveniet? Aliquam repellat atque ad excepturi itaque alias molestiae recusandae quasi vitae reiciendis quisquam repudiandae saepe id assumenda, fugiat earum qui.
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit, eveniet? Aliquam repellat atque ad excepturi itaque alias molestiae recusandae quasi vitae reiciendis quisquam repudiandae saepe id assumenda, fugiat earum qui.
                     </p> 
-                    <hr size="4" width="100%" color="black">
                 </div>
 
                 <div class="main-info-interests flex column">
@@ -77,7 +91,6 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit, eveniet? Aliquam repellat atque ad excepturi itaque alias molestiae recusandae quasi vitae reiciendis quisquam repudiandae saepe id assumenda, fugiat earum qui.
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit, eveniet? Aliquam repellat atque ad excepturi itaque alias molestiae recusandae quasi vitae reiciendis quisquam repudiandae saepe id assumenda, fugiat earum qui.
                     </p> 
-                    <hr size="4" width="100%" color="black">
                 </div>
 
                 <div class="main-info-references flex column">
@@ -87,7 +100,6 @@
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit, eveniet? Aliquam repellat atque ad excepturi itaque alias molestiae recusandae quasi vitae reiciendis quisquam repudiandae saepe id assumenda, fugiat earum qui.
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit, eveniet? Aliquam repellat atque ad excepturi itaque alias molestiae recusandae quasi vitae reiciendis quisquam repudiandae saepe id assumenda, fugiat earum qui.
                     </p> 
-                    <hr size="4" width="100%" color="black">
                 </div>
 
             </div>
