--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
                             <p>Catalogs</p>
                             <div class="overlay">
                                 <div class="catalog-content flex wrap justify-center align-center">
-                                    <img class="flex" src="./Assets/Portfolio/Catalogs/lpt-catalog.jpg">
-                                    <img class="flex" src="./Assets/Portfolio/Catalogs/lpt-catalog.jpg">
+                                    <img id="weldex" class="flex" src="./Assets/Portfolio/Catalogs/weldex_katalog.jpg">
+                                    <img class="flex" src="./Assets/Portfolio/Catalogs/weldex-open-catalog.jpg">
+                                    <img id="lpt" class="flex" src="./Assets/Portfolio/Catalogs/lpt-katalog.jpg">
                                     <img class="flex" src="./Assets/Portfolio/Catalogs/lpt-catalog.jpg">
 
                                 </div>
@@ -91,12 +92,9 @@
                     
                             <div class="overlay">
                                 <div class="flyer-content flex wrap justify-center align-center">
-                                    <img id="logo-weldex" class="flex" src="./Assets/Portfolio/Logotypes/weldex_logo.png">
-                                <img id="logo-is-direkt" class="flex" src="./Assets/Portfolio/Logotypes/is-direkt.jpg">
-                                <img id="logo-salong-space" class="flex" src="./Assets/Portfolio/Logotypes/salong-space.png">
-                                <img id="logo-oneline" class="flex" src="./Assets/Portfolio/Logotypes/oneline.png">
-                                <img id="logo-muskoka" class="flex" src="./Assets/Portfolio/Logotypes/muskoka-logo.png">
-                                <img id="logo-film-noir" class="flex" src="./Assets/Portfolio/Logotypes/film-noir.png">
+                                    <img class="flex" src="./Assets/Portfolio/Flyers/muskoka-add.jpg">
+                                    <img class="flex" src="./Assets/Portfolio/Flyers/isdirekt-add.jpg">
+                                    <img class="flex" src="./Assets/Portfolio/Flyers/carria-add.jpg">
                                 </div>
                             </div>
                             </div>
@@ -119,44 +117,44 @@
                         
 
                         <div class="container flex">
-                            <div class="medieinstitutet flex justify-center align-center text-center">
-                                <p>Front End Developer</p>
+                            <div class="education flex justify-center align-center text-center">
+                                <p class="red">Front End Developer</p>
                             <div class="overlay flex align-center">
-                                <div class="medieinstitutet-info flex">
-                                   <p>Medieinstitutet | 2021-2023</p>
+                                <div class="education-info flex justify-center align-center">
+                                   <p><b>Medieinstitutet</b> | 2021-2023</p>
                                 </div>
                             </div>
                             </div>
                         </div>
 
                         <div class="container flex">
-                            <div class="medieinstitutet flex justify-center align-center text-center">
-                                <p>Graphic Design</p>
+                            <div class="education flex justify-center align-center text-center">
+                                <p class="red">Graphic Design</p>
                             <div class="overlay flex align-center">
-                                <div class="medieinstitutet-info flex">
-                                   <p>Kristianstad University | 2019</p>
+                                <div class="education-info flex justify-center align-center">
+                                   <p><b>Kristianstad University</b> | 2019</p>
                                 </div>
                             </div>
                             </div>
                         </div>
 
                         <div class="container flex">
-                            <div class="medieinstitutet flex justify-center align-center text-center">
-                                <p>Business Ethics</p>
+                            <div class="education flex justify-center align-center text-center">
+                                <p class="red">Business Ethics</p>
                             <div class="overlay flex align-center">
-                                <div class="medieinstitutet-info flex">
-                                   <p>Uppsala University | 2019</p>
+                                <div class="education-info flex justify-center align-center">
+                                   <p><b>Uppsala University </b> | 2019</p>
                                 </div>
                             </div>
                             </div>
                         </div>
 
                         <div class="container flex">
-                            <div class="medieinstitutet flex justify-center align-center text-center">
-                                <p>Media and Communication Science - Strategic Communication</p>
+                            <div class="education flex justify-center align-center text-center">
+                                <p class="red">Media and Communication Science - Strategic Communication</p>
                             <div class="overlay flex align-center">
-                                <div class="medieinstitutet-info flex">
-                                   <p>Umeå University | 2015 - 2018</p>
+                                <div class="education-info flex justify-center align-center">
+                                   <p><b>Umeå University</b> | 2015 - 2018</p>
                                 </div>
                             </div>
                             </div>
@@ -199,10 +197,23 @@
 
                         <div class="container flex">
                             <div class="employments flex justify-center align-center text-center">
-                                <p>Front End Developer</p>
+                                <p class="red-larger">Employments</p>
                             <div class="overlay flex align-center">
-                                <div class="employment-info flex">
-                                   <p>Medieinstitutet | 2021-2023</p>
+                                <div class="employment-info flex justify-center align-center">
+                                   <p>
+                                    <b>Freelance</b> 
+                                    <br>
+                                    Graphic designer and copywriter | 2018 - present
+                                 <br><br> 
+                                    Design of product catalogs, graphic profiles, websites and folders.
+                                    <br><br><br>
+                                    <b>Kelly & Pling</b> 
+                                    <br>
+                                    PR Consultant | 2017-2018 
+                                 <br><br> 
+                                 Clip compilations, press releases, press processing, press lists, events and PR assistance, 
+                                 follow-up and evaluation of projects and initiatives.
+                                   </p>
                                 </div>
                             </div>
                             </div>
@@ -210,10 +221,16 @@
 
                         <div class="container flex">
                             <div class="internships flex justify-center align-center text-center">
-                                <p>Graphic Design</p>
+                                <p class="red-larger">Internships</p>
                             <div class="overlay flex align-center">
-                                <div class="internship-info flex">
-                                   <p>Kristianstad University | 2019</p>
+                                <div class="internship-info flex justify-center align-center">
+                                   <p>
+                                       <b>Region Västra Götaland</b> 
+                                       <br>
+                                       The communication unit for digital media | 2018 
+                                    <br><br>
+                                    Work towards the conference Offentliga Rummet 2018. Design and maintenance of conference application, 
+                                    updating of website and social media, production of video reports and interviews. </p>
                                 </div>
                             </div>
                             </div>
