Add hover effects like color and cursor + new fancy font

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Passion+One&family=Rock+Salt&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Passion+One&family=Major+Mono+Display&display=swap" rel="stylesheet">
       <title>Document</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./main.js"></script>
@@ -22,7 +22,7 @@
                 <div class="heading-info flex column align-center">
                     <img id="profile-img" class="profile-picture flex column" src="./Assets/profile-picture-color.png">
                     <h1 id="regard" class=""></h1>  
-                    <p id="profession" class="flex">Front End Developer Student <br> Communication Strategist</p>     
+                    <p id="profession" class="flex red">Front End Developer Student <br> Communication Strategist</p>     
                 </div>
                 <div class="heading-info-contact flex ">
                     <img class="github" src="./Assets/github-icon.png">
