--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Passion+One&family=Major+Mono+Display&display=swap" rel="stylesheet">
+      <link href="//fonts.googleapis.com/css2?family=Passion+One&family=Major+Mono+Display&display=swap" rel="stylesheet">
       <title>Document</title>
     <link rel="stylesheet" href="./style.css">
     <script src="./main.js"></script>
